# Attack-test

./: .coverage  .gitignore  CLAUDE.md  PLAN.md  PROGRESS.md  pyproject.toml  task.md
.claude/: settings.local.json
backend/: experiment.py  server.py
docs/debugging/: Spec.md  cross_platform.md  scapy_decimal.md
frontend/: app.js  index.html  style.css
src/: __init__.py  main.py
src/agent/: __init__.py  graph.py  nodes.py  state.py  system_prompt.py  tools.py
src/config/: allowlist.json  experiment.json
src/llm/: __init__.py  client.py
src/prompts/: __init__.py  plan_params.j2  plan_params_context.j2  system_prompt.j2
src/tools/: __init__.py  log_tool.py  mixed_traffic_tool.py  pcap_profile_tool.py  ping_monitor.py  ping_rtt_tool.py  traffic_send_tool.py
tests/: conftest.py
tests/e2e/: test_e2e_closed_loop.py
tests/integration/: test_agent_graph.py  test_agent_loop.py  test_agent_nodes.py  test_web_experiment.py
tests/unit/: test_llm_client.py  test_log_tool.py  test_mixed_traffic_tool.py  test_pcap_profile_tool.py  test_ping_monitor.py  test_ping_rtt_tool.py  test_traffic_send_tool.py
