[project]
name = "attack-test"
version = "0.1.0"
description = "Closed-Loop Network Experiment Agent"
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.6.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.0.0",
    "jinja2>=3.0.0",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
